# sdk

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .syncinclude  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF_SOLANA_FOUNDATION.md  MANIFEST.in  Makefile  PYPI.md  README.md  SECURITY.md  almanak_copy_ledger.db  docker-compose.backtest.yml  mkdocs-llms.yml  mkdocs.yml  pyproject.toml  pytest.ini  scores.json
almanak/: __init__.py  _lazy.py  _version.py
almanak/cli/: agent.py  cli.py
almanak/config/: README.md  __init__.py  agent_tools.py  backtest.py  base.py  cli_options.py  cli_runtime.py  connectors.py  demo_runtime.py  env.py  framework.py  gateway_runtime.py  hosted.py  local.py  precedence.py  redaction.py  runtime.py  safe_signer.py  service.py  simulation.py  strategy.py
almanak/connectors/: __init__.py  _connector.py  _connector_descriptor.py  _gateway_registry.py  _strategy_accounting_report_registry.py  _strategy_accounting_treatment_registry.py  _strategy_agent_tool_registry.py  _strategy_backtest_risk_registry.py  _strategy_bridge_registry.py  _strategy_contract_role_registry.py  _strategy_deferred_refresh_registry.py  _strategy_flash_loan_registry.py  _strategy_gas_estimate_registry.py  _strategy_pool_reader_registry.py  _strategy_principal_token_market_reader_registry.py  _strategy_protocol_family_registry.py  _strategy_protocol_metadata_registry.py  _strategy_receipt_registry.py  _strategy_runner_hook_registry.py  _strategy_swap_classification_registry.py  _strategy_swap_quote_registry.py  _strategy_swap_route_inference_registry.py  _strategy_yield_poke_registry.py
almanak/core/: chainlink.py  constants.py  contracts.py  custom_exceptions.py  enums.py  perp_markets.py  redaction.py
almanak/demo_strategies/: __init__.py
almanak/framework/: __init__.py  gateway_client.py  local_paths.py
almanak/gateway/: __init__.py  _register_chains_helpers.py  _server_start_helpers.py  audit.py  auth.py  database.py  managed.py  managed_serve.py  metrics.py  server.py  validation.py
almanak/llms/: __init__.py  llms.txt
almanak/services/: __init__.py
almanak/skills/: __init__.py  skill_renderer.py
almanak/test_controller/: __init__.py  __main__.py
config/: rpc_defaults.json
docs/: agent-skills.es.md  agent-skills.fr.md  agent-skills.md  agent-skills.zh.md  environment-variables.es.md  environment-variables.fr.md  environment-variables.md  environment-variables.zh.md  getting-started.es.md  getting-started.fr.md  getting-started.md  getting-started.zh.md  index.es.md  index.fr.md  index.md  index.zh.md  solana.md
docs/agentic/: adapters.md  agent-tools.md  index.md
docs/api/: alerting.md  backtesting.md  compiler.md  dashboard.md  data.md  deployment.md  enums.md  execution.md  index.md  indicators.md  intents.md  logging.md  market.md  services.md  state.md  strategies.md  tokens.md
docs/cli/: almanak-ax.md  almanak-dashboard.md  almanak-gateway.md  almanak-strat.md  almanak.md  dashboard-test.md  strat-example.md  strat-new.md  strat-run.md  strat-teardown.md  strat-test.md
docs/gateway/: api-reference.md  troubleshooting.es.md  troubleshooting.fr.md  troubleshooting.md  troubleshooting.zh.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
examples/: README.md  backtest_looping_strategy.py  backtest_lp_strategy.py  backtest_ta_strategy.py  demo_dashboard.py  demo_data.py  demo_protocols.py
examples/agentic/: README.md
examples/common/: __init__.py  chart_helpers.py  data_providers.py
memory/: codebase-patterns.md
skills/almanak-strategy-builder/: SKILL.md
strategies/: __init__.py
strategies/demo/: __init__.py  progress.txt  strategy.py
strategies/incubating/: __init__.py
strategies/reference/: README.md
strategies/tests/: ta-strats-report.txt  test_all_via_cli.py
strategies/vaults/: README.md  __init__.py
strategies/xlayer/: README.md
tests/: conftest.py  conftest_gateway.py  e2e_safe_lp_test.py
tests/benchmark/: __init__.py
tests/bt-trust/: __init__.py  test_invariants.py  test_math.py  test_reproducibility.py
tests/e2e/: test_defai_vault_lp.py  test_defai_vault_lp_rebalance.py
tests/fixtures/: agent_test_fixtures.py
tests/framework/: test_balancer_flash_loan_intent.py  test_runtime_import_coverage.py
tests/gateway/: conftest.py  grpc_harness.py  test_aave_market_lookup.py  test_accounting_position_event_rpcs.py  test_activity_feed.py  test_archive_rpc_check.py  test_archive_rpc_gate.py  test_audit.py  test_audit_intercept_service.py  test_auth.py  test_base_integration_retry.py  test_batch_balances.py  test_beefy_vault_lookup.py  test_binance_get_klines.py  test_bridge_managed_smoke.py  test_bsc_chain_alias.py  test_client.py  test_coingecko_address_endpoint.py  test_coingecko_chain_scoped_address.py  test_coingecko_ethereum_tokens.py  test_coingecko_mantle_tokens.py  test_coingecko_ohlcv_handler.py  test_coingecko_retry.py  test_compile_bridge_intent.py  test_compile_intent_characterization.py  test_compile_intent_price_gate_pins.py  test_compile_intent_type_aliases.py  test_compile_intent_validation.py  test_compound_market_lookup.py  test_containers.py  test_dashboard_helpers.py  test_dashboard_nav_truncation_metric.py  test_dashboard_service.py  test_dashboard_service_positions.py  test_dashboard_service_reconcile.py  test_database.py  test_dexscreener_multichain.py  test_dexscreener_price_source.py  test_enso_service.py  test_enso_service_get_approval.py  (+107 more)
tests/golden_tests/: README.md  __init__.py  lending_fixtures.json  lp_fixtures.json  perp_fixtures.json  test_golden_accuracy.py
tests/integration/: __init__.py  conftest.py  test_accounting_augment_path_integration.py  test_btcb_bsc_decimals_onchain.py  test_token_resolver_integration.py
tests/intents/: __init__.py  _curve_lp_layer5_helpers.py  _fluid_quote_helpers.py  _lp_setup_helpers.py  _permission_onchain_harness.py  _traderjoe_v2_layer5.py  _zodiac_helpers.py  conftest.py  pool_helpers.py  test_deleverage_compilation.py  test_prediction_compilation.py  test_prediction_intents.py  (+2 more)
(+5982 files in other folders)
