[project]
name = "almanak"
version = "2.15.0"
description = "A powerful Python SDK for developing and deploying autonomous DeFi agents. Features agent-based modeling, state machine architecture, and non-custodial execution through Safe smart accounts"
authors = [
    {name = "engineering@almanak.co"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "PYPI.md"
requires-python = ">=3.12"
dependencies = [
    # SDK dependencies
    "requests>=2.32.3,<3.0.0",
    "click>=8.1.8,<9.0.0",
    "httpx>=0.28.1,<0.29.0",
    "pandas>=2.2.3,<4.0.0",
    "aiohttp>=3.11.11,<4.0.0",
    "certifi>=2024.2.2",
    "python-dotenv>=1.0.1,<2.0.0",
    "pydantic>=2.10.6,<3.0.0",
    "retry>=0.9.2,<0.10.0",
    "web3>=6.15.1,<8.0.0",
    "streamlit>=1.44.1,<2.0.0",
    # Framework dependencies
    "pytz>=2023.4",
    "PyYAML>=6.0.1",
    "fastapi>=0.128.0",
    # V2 Framework dependencies
    "eth-account>=0.13.7,<0.14.0",
    "eth-abi>=5.0.0",
    # Solana dependencies (Ed25519 keypairs, transaction serialization)
    "solders>=0.27.1",
    "structlog>=24.1.0",
    "nest_asyncio>=1.6.0",
    "matplotlib>=3.10.8",
    "python-kraken-sdk>=3.2.7",
    "asyncpg>=0.29.0", # PostgreSQL async driver for state management
    # Gateway dependencies (gRPC)
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "grpcio-health-checking>=1.76.0",
    "grpcio-reflection>=1.76.0",
    "googleapis-common-protos>=1.69.0", # google.rpc.{status_pb2, error_details_pb2} for VIB-3800 typed gRPC errors
    "pydantic-settings>=2.0.0", # For gateway configuration
    "prometheus-client>=0.25.0", # For gateway metrics
    # Backtesting dependencies
    "tqdm>=4.66.0", # Progress bar for backtest sweeps
    "optuna>=3.5.0", # Bayesian optimization for parameter tuning
    "plotly>=5.18.0", # Interactive charts for backtest visualization
    # Interactive terminal menus (used by almanak strat demo)
    "simple-term-menu>=1.6.4,<2.0.0",
    # LSP / editor tooling (used by almanak-code)
    "pyright>=1.1.390",
    # Polymarket V2 building blocks (typed-data structs, amount math, signing helpers).
    # Used by the polymarket connector — we keep our own ClobClient (rate limit, error
    # handling, credential management) but borrow V2 reference helpers from this dep.
    "py-clob-client-v2==1.0.0",
]

[project.optional-dependencies]
dev = [
    "setuptools>=61",
    "wheel==0.46.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocs-static-i18n>=1.2.0",
    "mkdocs-llmstxt>=0.5.0",
    "mkdocstrings[python]>=0.29.0",
    "md-click-2 (>=0.0.1,<0.0.2)",
    "twine (>=6.1.0,<7.0.0)",
    "ruff (>=0.9.10,<0.15.0)",
    "mypy>=1.19.1,<2.0.0",
    "mypy-protobuf>=3.6.0",
    "types-requests>=2.32.0",
    "types-PyYAML>=6.0.0",
    "types-pytz>=2024.1.0",
    "types-retry>=0.9.0",
    "types-protobuf>=5.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.3.1",
    "asgi-lifespan>=2.1.0",
    # CRAP/complexity tooling (Phase 0, see docs/internal/coverage-improvement-plan.md §8)
    "radon>=6.0.1",
    "xenon>=0.9.1",
    "diff-cover>=10.2.0",
]

[tool.poetry]
include = [
    { path = "almanak/bin/*", format = ["sdist", "wheel"] },
    { path = "almanak/llms/llms-full.txt", format = ["sdist", "wheel"] },
    { path = "almanak/skills/**/*.md", format = ["sdist", "wheel"] },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
almanak = "almanak.cli:almanak"

[project.entry-points.diff_cover]
# Diff-aware CRAP gate. Invoke via `diff-quality --violations crap`.
# Implementation: scripts/ci/crap_diff_plugin.py (see [tool.crap-diff] for config).
crap = "scripts.ci.crap_diff_plugin"


[tool.ruff]
line-length = 120
include = ["almanak/**/*.py"]
exclude = [
    ".claude/",  # Skills templates with placeholder syntax
    "almanak/gateway/proto/",  # Auto-generated protobuf files
    "almanak/demo_strategies/",  # Packaged demo strategies (user-facing, copied as-is)
]

[dependency-groups]
dev = [
    "mkdocs-llmstxt>=0.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.3.1",
    "asgi-lifespan>=2.1.0",
    "radon>=6.0.1",
    "xenon>=0.9.1",
    "diff-cover>=10.2.0",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "C901", # mccabe complexity (Phase 0; max-complexity below)
]
ignore = [
    "E501",  # line too long - formatter handles code; long strings are intentional (logs, errors)
    "E402",  # module level import not at top of file - required for sys.path manipulation
    "B008",  # function call in defaults - required for FastAPI Depends()
]

[tool.ruff.lint.mccabe]
# Phase 0 baseline (2026-05-04). 509 existing functions exceed this threshold; they are
# silenced via in-line `# noqa: C901` (sweep produced by `ruff check --select C901 --add-noqa`).
# The gate now blocks NEW functions with CC > 15. Each refactored hot function should drop
# its noqa; the inventory shrinks as the CRAP work progresses.
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Re-exports are intentional in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["almanak"]

# --- pytest ---
[tool.pytest.ini_options]
addopts = "-n auto"

# --- coverage ---
[tool.coverage.run]
source = ["almanak"]
omit = [
    "almanak/gateway/proto/*_pb2*.py",
    # `almanak/**/tests/*` was previously here to exclude inline pytest test
    # files that lived alongside framework code. After #2066 those files all
    # moved into `tests/unit/`, so the only remaining matches were production
    # library modules under `almanak/framework/data/qa/tests/` (cex_historical,
    # dex_historical, rsi, etc., used by `data/qa/runner.py`) — they belong in
    # the coverage denominator, so the rule has been removed. (#2068 also
    # renamed that production package to `data/qa/test_definitions/`.)
    #
    # The follow-up `almanak/**/test_*.py` rule (issue #2068) is also gone:
    # the last `test_*.py` file under `almanak/` (a manual Anvil reproducer
    # in `demo_strategies/fluid_swap_arb/`) has been renamed to
    # `run_on_anvil.py`, so coverage no longer needs to skip pytest-shaped
    # files inside the package.
    # Phase 0 (2026-05-04): exclude non-production surfaces from the coverage denominator.
    # Rationale lives in docs/internal/coverage-improvement-plan.md §8 Phase 0.
    "almanak/demo_strategies/*",                    # user-facing tutorial templates, not framework
    "almanak/framework/dashboard/pages/*",          # Streamlit page bodies — not unit-testable (§5)
    "almanak/framework/backtesting/dashboard/*",    # Streamlit — same
    "almanak/framework/accounting/accountant_test.py",  # 21-cell test harness, runs against live DBs
    # Phase 6b-1 (2026-05-04): Track-A2/B accounting library code with no production callers.
    # CLAUDE.md "Track B/C are library code without production callers" — same disposition as
    # accountant_test.py. Verified by `grep -rln <module> almanak/`: only self-imports.
    # Wire them up in a future PR if/when they get production callers; until then, counting
    # them in the denominator is a measurement error.
    "almanak/framework/accounting/observations.py",     # Track A2 — composed observation type, no caller
    "almanak/framework/accounting/receipts.py",         # Track A2 — pure receipt type, only used by observations.py
    "almanak/framework/accounting/typed_columns.py",    # Track B — populate_typed_columns library, no production caller
]

[tool.coverage.report]
# Coverage floor — ratchets up after each phase, never down.
#
# Floor history:
#   2026-05-04 — Phase 0 (#2035) initial floor: 55 (pre-omit measured 55.26%)
#   2026-05-04 — Phase 0 + 6a (#2039) merged: CI measured 66.69% on the full unit-scope
#                (152 593 stmts, 22 210 tests passing, 8m02s with COVERAGE_CORE=sysmon).
#                Bumped to 65 → 1.69 pt buffer for normal noise.
#   2026-05-05 — Phase 5b (#2051) + Phase 8 (#2063) + framework consolidation (#2066)
#                merged. Local measurement on b7aec92c: 73.69% on the full unit-scope
#                (152 674 stmts, 27 939 tests passing, 4m59s with COVERAGE_CORE=sysmon).
#                Bumped to 72 → 1.69 pt buffer (matches the 2026-05-04 ratchet pattern).
#
# fail_under is a no-regress gate, NOT the goal — the 80% target lives in
# docs/internal/coverage-improvement-plan.md §3. Ratchet policy (each phase increments
# fail_under to its exit-criteria number, never decrements) is in §8 Phase 0 of the same doc.
fail_under = 72
show_missing = true
skip_empty = true

# --- CRAP diff gate (PR-only; see scripts/ci/crap_diff_plugin.py) ---
[tool.crap-diff]
# Threshold above which a function is flagged. CRAP = CC^2 * (1-cov)^3 + CC.
# Matches scripts/crap_score.py and docs/internal/coverage-improvement-plan.md §7.
threshold = 30
# Coverage data file — produced by `make test-ci`.
coverage_data = ".coverage"
# Walk only this package; ignores files outside it (e.g. tests/, scripts/).
package_root = "almanak"
# Honor [tool.coverage.run].omit so files already excluded from the coverage
# denominator (Streamlit pages, accountant_test, etc.) don't trip the gate.
honor_omit = true

# --- mypy type checking ---
[tool.mypy]
python_version = "3.12"
files = ["almanak"]
exclude = [
    "almanak/gateway/proto/",  # Auto-generated protobuf files
    "almanak/demo_strategies/",  # Packaged demo strategies (user-facing, copied as-is)
]
# Start strict-ish: catch real bugs without requiring full annotation coverage
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
extra_checks = true
# Do not require full annotations yet - enable incrementally
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
# Import handling
ignore_missing_imports = false
follow_imports = "normal"

# Third-party libraries without stubs or inline types
[[tool.mypy.overrides]]
module = [
    "web3.*",
    "eth_account.*",
    "eth_abi.*",
    "eth_typing.*",
    "eth_utils.*",
    "grpc.*",
    "grpc_tools.*",
    "grpc_health.*",
    "grpc_reflection.*",
    "google.protobuf.*",
    "google.cloud.*",
    "google.rpc.*",
    "streamlit.*",
    "plotly.*",
    "optuna.*",
    "nest_asyncio",
    "kraken.*",
    "prometheus_client.*",
    "enso_client.*",
    "uvicorn.*",
    "asyncpg.*",
    "tqdm.*",
    "pandas.*",
    "matplotlib.*",
    "structlog.*",
    "simple_term_menu.*",
    "yaml",
    "yaml.*",
    "langchain_core.*",
    "pytz",
    "pytz.*",
]
ignore_missing_imports = true

# Internal modules that may or may not be present depending on the environment
[[tool.mypy.overrides]]
module = [
    "almanak.framework.data.price.multi_dex",
    "almanak.framework.state.portfolio",
]
ignore_missing_imports = true
follow_imports = "skip"

# In-tree test/library code where mypy would otherwise complain.
# After #2066 lifted every inline `tests/` directory into the central
# `tests/unit/` tree, the only remaining match is `data/qa/*` which holds
# both the QA test-definition library modules (cex_historical, cex_spot,
# dex_historical, dex_spot, rsi) and the reporting layer.
[[tool.mypy.overrides]]
module = [
    "almanak.framework.data.qa.*",
]
ignore_errors = true
